--- a/Pear/Controllers/Profiles/Profile Do Dont/ProfileDoDontViewController.storyboard
+++ b/Pear/Controllers/Profiles/Profile Do Dont/ProfileDoDontViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tns-Tj-5Ab">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tns-Tj-5Ab">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -37,9 +37,16 @@
                                             <constraint firstAttribute="width" constant="46" id="eCO-uU-en9"/>
                                         </constraints>
                                     </imageView>
+                                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="90t-o6-2S0">
+                                        <rect key="frame" x="187.5" y="0.0" width="0.0" height="0.0"/>
+                                        <color key="pageIndicatorTintColor" white="0.5" alpha="0.10000000000000001" colorSpace="calibratedWhite"/>
+                                        <color key="currentPageIndicatorTintColor" white="0.10000000000000001" alpha="0.10000000000000001" colorSpace="calibratedWhite"/>
+                                    </pageControl>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="90t-o6-2S0" firstAttribute="centerX" secondItem="Yzj-YS-ktJ" secondAttribute="centerX" id="6D9-hf-Ydl"/>
                                     <constraint firstItem="hEU-Ht-yCj" firstAttribute="leading" secondItem="PWM-Qe-l4h" secondAttribute="trailing" constant="8" id="6PH-WW-iIz"/>
+                                    <constraint firstItem="90t-o6-2S0" firstAttribute="top" secondItem="Yzj-YS-ktJ" secondAttribute="top" id="LCR-n7-Wlj"/>
                                     <constraint firstItem="PWM-Qe-l4h" firstAttribute="leading" secondItem="Yzj-YS-ktJ" secondAttribute="leading" constant="8" id="We5-Ox-KVh"/>
                                     <constraint firstItem="hEU-Ht-yCj" firstAttribute="top" secondItem="Yzj-YS-ktJ" secondAttribute="top" constant="12" id="ZLQ-gI-MSL"/>
                                     <constraint firstItem="PWM-Qe-l4h" firstAttribute="centerY" secondItem="hEU-Ht-yCj" secondAttribute="centerY" id="j6l-oF-bGW"/>
@@ -63,6 +70,7 @@
                     </stackView>
                     <size key="freeformSize" width="375" height="260"/>
                     <connections>
+                        <outlet property="pageControl" destination="90t-o6-2S0" id="DY9-to-M5X"/>
                         <outlet property="scrollView" destination="e0w-vx-wtg" id="DXA-IY-qfH"/>
                         <outlet property="scrollViewHeightConstraint" destination="Fez-G5-Oco" id="nmr-p2-RTS"/>
                         <outlet property="titleImageView" destination="PWM-Qe-l4h" id="rKh-l3-HiC"/>
@@ -75,6 +83,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="profile-icon-do" width="48" height="48"/>
+        <image name="profile-icon-do" width="240" height="240"/>
     </resources>
 </document>
